syntax = "proto3";

package balancerpb;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "modules/balancer/agent/balancerpb/module.proto";

option go_package = "github.com/yanet-platform/yanet2/modules/"
		    "balancer/agent/balancerpb;balancerpb";

// Real server runtime information.
//
// Provides statistics about a specific real server including
// active session count and last activity timestamp.
message RealInfo {
	// Real server identifier
	RealIdentifier id = 1;

	// Number of active sessions currently assigned to this real server.
	//
	// This count is updated asynchronously during periodic refresh
	// (controlled by StateConfig.refresh_period), so it may not reflect
	// the exact current state. The update frequency depends on the
	// configured refresh period.
	uint64 active_sessions = 2;

	// Timestamp of the last packet processed for this real server.
	//
	// Updated when any packet is forwarded to or received from this real.
	// Useful for detecting inactive reals or monitoring traffic patterns.
	google.protobuf.Timestamp last_packet_timestamp = 3;
}

// Virtual service runtime information.
//
// Provides statistics about a specific virtual service including
// active session count, last activity, and per-real statistics.
message VsInfo {
	// Virtual service identifier
	VsIdentifier id = 1;

	// Number of active sessions for this virtual service.
	//
	// This is the sum of active sessions across all real servers
	// backing this virtual service. Updated asynchronously during
	// periodic refresh, so may lag behind actual state.
	uint64 active_sessions = 2;

	// Timestamp of the last packet processed for this virtual service.
	//
	// Updated when any packet matches this virtual service.
	// Useful for detecting inactive services or monitoring traffic
	// patterns.
	google.protobuf.Timestamp last_packet_timestamp = 3;

	// Runtime information for each real server backing this virtual
	// service.
	//
	// Provides per-real session counts and activity timestamps.
	// The list corresponds to the reals configured in VirtualService.
	repeated RealInfo reals = 4;
}

// Balancer-wide runtime information.
//
// Aggregates statistics across all virtual services and real servers
// managed by this balancer instance.
message BalancerInfo {
	// Total number of active sessions across all virtual services.
	//
	// This is the sum of active sessions for all virtual services
	// managed by this balancer. Updated asynchronously during periodic
	// refresh (controlled by StateConfig.refresh_period).
	//
	// Note: This represents sessions tracked by the balancer, not
	// necessarily all active connections to real servers (which may
	// have additional direct connections).
	uint64 active_sessions = 1;

	// Timestamp of the last packet processed by this balancer.
	//
	// Updated when any packet is processed by any virtual service.
	// Useful for monitoring balancer activity and detecting issues.
	google.protobuf.Timestamp last_packet_timestamp = 2;

	// Runtime information for each virtual service.
	//
	// Provides per-VS session counts, activity timestamps, and
	// per-real statistics. The list includes all configured virtual
	// services, even if they have no active sessions.
	repeated VsInfo vs = 3;
}

////////////////////////////////////////////////////////////////////////////////

// Individual session information.
//
// Represents a single active session tracked by the balancer,
// including client information, virtual service mapping, real server
// assignment, and timing information.
message SessionInfo {
	// Client source IP address (IPv4 or IPv6)
	Addr client_addr = 1;

	// Client source port number
	uint32 client_port = 2;

	// Virtual service this session is associated with.
	//
	// Identifies which virtual service the client connected to.
	VsIdentifier vs_id = 3;

	// Real server this session is assigned to.
	//
	// Identifies which real server is handling this session.
	// Once assigned, all packets for this session are forwarded
	// to this real (unless the real becomes unavailable).
	RealIdentifier real_id = 4;

	// Session creation timestamp.
	//
	// When the first packet of this session was processed and
	// the session was created in the session table.
	google.protobuf.Timestamp create_timestamp = 5;

	// Last packet timestamp.
	//
	// When the most recent packet for this session was processed.
	// Used to calculate session age and determine if timeout has expired.
	google.protobuf.Timestamp last_packet_timestamp = 6;

	// Session timeout duration.
	//
	// How long the session remains active without receiving packets.
	// The timeout value depends on the protocol and TCP state:
	// - TCP SYN: sessions_timeouts.tcp_syn
	// - TCP SYN-ACK: sessions_timeouts.tcp_syn_ack
	// - TCP FIN: sessions_timeouts.tcp_fin
	// - TCP established: sessions_timeouts.tcp
	// - UDP: sessions_timeouts.udp
	//
	// If (current_time - last_packet_timestamp) > timeout, the session
	// is removed from the session table during the next cleanup cycle.
	google.protobuf.Duration timeout = 7;
}
